- instructions on installing with pip

--- a/README
+++ b/README
@@ -99,6 +99,10 @@ Installing
 
 python setup.py install
 
+or install directly from github with:
+
+pip install -e git+git://github.com/rlgomes/memoize.git#egg=memoize
+
 Running Built-In Tests
 -----------------------
 
